<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/dialog_spinner_bg"
                android:gravity="center">

    <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:maxLines="1"
            android:text="@string/dialog_title"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"/>

    <LinearLayout
            android:id="@+id/ll_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_title"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/dialog_chose_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/video_type"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="@dimen/sp_14"/>

        <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:dropDownWidth="150dp"
                android:popupBackground="@drawable/dialog_spinner_bg"
                android:scrollbars="none"
                android:spinnerMode="dropdown"
                android:theme="@style/spinner"/>
    </LinearLayout>

    <View
            android:id="@+id/view_line"
            style="@style/AppWidget.DeepLine"
            android:layout_below="@+id/ll_spinner"
            android:layout_marginTop="10dp"/>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/view_line">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/cancel_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/dialog_cancel"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="@dimen/sp_16"
                    android:textStyle="bold"/>

            <TextView
                    android:id="@+id/confirm_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="@string/dialog_sure"
                    android:textColor="@color/general_blue"
                    android:textSize="@dimen/sp_16"
                    android:textStyle="bold"/>
        </LinearLayout>

        <View
                style="@style/AppWidget.DeepLine.Vertical"
                android:layout_centerHorizontal="true"/>
    </RelativeLayout>
</RelativeLayout>
